# passa

./: .coveragerc  .editorconfig  .gitignore  .gitmodules  .travis.yml  CHANGELOG.rst  MANIFEST.in  Pipfile  README.rst  appveyor.yml  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml
docs/: cli.rst  conf.py  index.rst  philo.rst
news/: 0.feature  14.feature.rst  15.feature.rst  17.feature.rst  18.bugfix.rst  20.feature.rst  22.bugfix.rst  22.feature.rst  24.bugfix.rst  33.bugfix.rst  34.bugfix.rst  4.bugfix.rst  49.feature.rst  50.bugfix.rst  51.bugfix  51.bugfix.rst  53.feature.rst  66.bugfix.rst  66.feature.rst  67.bugfix.rst  68.feature.rst
pack/: run.py
src/passa/: __init__.py  __main__.py  _pip.py  _pip_shims.py  caches.py  candidates.py  cli.py  dependencies.py  dependencies_pip.py  hashes.py  lockers.py  lockfile.py  locking.py  markers.py  metadata.py  output.py  projects.py  providers.py  reporters.py  resolver.py  synchronizers.py  test.py  traces.py  utils.py  vcs.py
src/passa/actions/: add.py  clean.py  freeze.py  init.py  install.py  lock.py  remove.py  sync.py  upgrade.py
src/passa/cli/: __init__.py  _base.py  add.py  clean.py  freeze.py  install.py  lock.py  options.py  remove.py  sync.py  upgrade.py
src/passa/internals/: _pip.py  _pip_shims.py  candidates.py  dependencies.py  lockers.py  markers.py  projects.py  providers.py  pyproject.py  reporters.py  specifiers.py  synchronizers.py  utils.py
src/passa/models/: __init__.py  caches.py  environments.py  lockers.py  lockfiles.py  metadata.py  pipfiles.py  projects.py  providers.py  sections.py  synchronizers.py  virtualenv.py
src/passa/operations/: lock.py  sync.py
src/passa/reporters/: __init__.py  base.py  spinner.py  stdout.py
tasks/: __init__.py  admin.py  package.py
tasks/pack/: __main__.py
tasks/pack/lib/: typing.py
tests/: __init__.py  conftest.py  test_markers.py  test_specifiers.py
tests/actions/: test_add.py  test_clean.py  test_freeze.py  test_init.py  test_install.py  test_lock.py  test_remove_and_sync.py
tests/fixtures/git/github.com/testing/demo.git/: setup.py
tests/fixtures/git/github.com/testing/no_dep.git/: setup.py
tests/pytest-pypi/: setup.py
tests/pytest-pypi/pytest_pypi/: app.py
tests/unit/: test_specifiers.py
