[metadata]
name = passa
description = A resolver implementation for generating and interacting with Pipenv-compatible Lockfiles.
url = https://github.com/sarugaku/passa
author = Dan Ryan
author_email = dan@danryan.co
long_description = file: README.rst
license = ISC License
license_file = LICENSE
keywords =
    dependency resolver
    package management
    package resolver
    resolver
    pip
    pipenv
    requirementslib
    pipfile
    dependencies
    dependency management
classifier =
    Development Status :: 4 - Beta
    License :: OSI Approved :: ISC License (ISCL)
    Operating System :: OS Independent
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = true
python_requires = >=2.7,!=3.0,!=3.1,!=3.2,!=3.3
setup_requires = setuptools>=36.2.2
install_requires =
    appdirs
    distlib
    packaging
    pip-shims>=0.1.2
    plette[validation]>=0.2.2
    requests
    resolvelib>=0.2.1,!=1.0.0.dev0
    requirementslib>=1.1.1
    six
    vistir>=0.1.4

[options.extras_require]
tests =
    pytest-xdist
    pytest-timeout
    pytest-cov
    pytest

[options.entry_points]
console_scripts =
    passa=passa.cli:main

[bdist_wheel]
universal = 1

[isort]
atomic=true
lines_after_imports=2
lines_between_types=1
multi_line_output=5
not_skip=__init__.py
known_first_party =
    passa
    tests
ignore_trailing_comma=true

[flake8]
exclude = .git,__pycache__,docs/,*.egg,build,data
select = E,W,F
ignore =
    # The default ignore list:
    E121,E123,E126,E226,E24,E704,
    # Our additions:
    # E127: continuation line over-indented for visual indent
    # E128: continuation line under-indented for visual indent
    # E129: visually indented line with same indent as next logical line
    # E222: multiple spaces after operator
    # E231: missing whitespace after ','
    # E402: module level import not at top of file
    # E501: line too long
    E127,E128,E129,E222,E231,E402,E501

[tool:pytest]
strict = true
addopts = -ra
testpaths = tests/
norecursedirs = .* build dist news tasks docs

[build-system]
requires = ["setuptools", "wheel"]
